# mp2-2025-lab5-tables

./: CMakeLists.txt  README.md
include/: avl_tree_table.h  logger.h  table_struct.h  unsorted_table.h
sln/Lab_Tables/: Lab_Tables.sln
sln/Lab_Tables/Lab_Tables/: Lab_Tables.vcxproj  Lab_Tables.vcxproj.filters  avl_tree_table.cpp  hash_table.h  logger.cpp  logger.h  main.cpp  polynomial.h  sorted_table.h  table_struct.h  unsorted_table.cpp  unsorted_table.h
src/: hash_table.cpp  logger.cpp  main.cpp  polynomials.cpp  sorted_table.cpp
